--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "engines": {
     "node": ">=8.0.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/discrete-javascript/craco-copy-webpack-plugin.git"
+  },
   "keywords": [
     "craco",
     "copy",
@@ -15,8 +19,12 @@
     "create-react-app"
   ],
   "author": "Rajesh Wellington",
+  "bugs": {
+    "url": "https://github.com/discrete-javascript/craco-copy-webpack-plugin.git"
+  },
   "license": "MIT",
   "devDependencies": {
-   "copy-webpack-plugin": "6.4.1"
-  }
+    "copy-webpack-plugin": "6.4.1"
+  },
+  "homepage": "https://github.com/discrete-javascript/craco-copy-webpack-plugin.git"
 }
